--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <img class="arrow-img" src="./assets/images/arrow.png" alt="image-arrow">
            
             <div class="currency-box">
-                <img src="./assets/images/dolar.png" alt="logo-da-moeda-convertida"/>
-                <p class="currency">Dolar</p>
+                <img class="currency-img" src="./assets/images/dolar.png" alt="logo-da-moeda-convertida"/>
+                <p class="currency" id="currency-name">Dolar</p>
                 <p class="currency-value">$ 0,00</p>
             </div>
         </section>
